--Added comboBox to checkbox's callback 4th param so that API funcs like RunCustomScrollableMenuItemsCallback can use it
--Added a collapsible header + button via options.headerCollapsible to toggle the header's height. State will be saved in SavedVariables per openingControl or combobox name.
--Added option.headerCollapsed to always show the collapsible header at that state if the menu opens

--Added API function GetCustomScrollableMenuRowData(rowControl)
--Added item.m_owner to RefreshSortedItems

-[Changes]
--Callback functions for checkboxes now use the similar signature like normal entry callbacks:	function(comboBox, itemName, item, checked)


-v- ---------------LSM v2.21 - 2024-06-02---------------------------------------------------------------------------- -v-
-[Fixes]-
--Search/filter edtibox resets to empty if options.enableFilter == false


-v- ---------------LSM v2.2 - 2024-06-02---------------------------------------------------------------------------- -v-
-[Fixes]-
--Open and close clicks
--Context menus open & close, and other bugs
--Sizes
--Highlights
--Non clickable items
--MultiIcons
--Sounds
--Checkboxes
--Entry type determination
--Row's dataSource etc. updating
--Tooltips & custom tooltips
--API functions
--Callbacks (some callback parameters have changed!)
--Behavor of menus and contextmenus if ZO_Menu is used in addition
--Compatibility fix for LibCustomMenu submenus (which only used data.label as the name)

-[Changes]-
-Changed default sorting to "false" now. Enable it via options.sortEntries if you need it sorted by default

-[Additions]-
-Added new combobox header: Headline text, subline text, text search filter -> All optional, controled via the options table
-Added opened submenu highlight "breadcrumb" to show chain of opened submenus
-Added option maxDropdownHeight
-Added option useDefaultHighlightForSubmenuWithCallback